--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
+  <img src="img/logo.jpeg">
   <div class="wrapper">
     <header>Todo App</header>
     <div class="inputField">
