font end modification

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
-  <img src="img/logo.jpeg">
   <div class="wrapper">
-    <header>Todo App</header>
+    <img src="img/logo.png" style="text-align: center; width: 150px; height: 150px;">
+    <header>Zeyu, Haoran, Zihao's Todo App</header>
     <div class="inputField">
       <input type="text" placeholder="Add your new todo">
       <button><i class="fas fa-plus"></i></button>
@@ -21,6 +21,11 @@
       <span>You have <span class="pendingTasks"></span> pending tasks</span>
       <button>Clear All</button>
     </div>
+  </div>
+  <div class="copyright">
+      <p style="text-align: center; color: white;">
+        Copyright © Zeyu, Haoran, Zihao
+      </p>
   </div>
 
   <script src="script.js"></script>
